updated about me page

--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
 
 <body>
     <div class="wrapper">
+        <!-- START NAV -->
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container">
                 <a class="navbar-brand siteHeader" href="index.html"><h1 class="bigYtext">Kumari</h1></a>
@@ -27,9 +28,12 @@
                 </div>
             </div>
         </nav>
+        <!-- END NAV -->
 
+        <!-- START MAIN CONTAINER -->
 	    <div class="container contactContent">
                 <div class="row">
+                    <!-- START MAIN CONTENT -->
                     <div class="col-md-8 colL">
                         <div class="card">
                             <div class="card-body">
@@ -53,22 +57,28 @@
                                 </form>
                             </div>
                         </div>
-                    </div>            
-                        <div class="col-md-4">
-                            <div class="card">
-                                <div class="card-body pb-4" style="text-align: center;">
-                                    <h5 class="card-title headerConnect">Connect with Me</h5>
-                                    <hr class="my-4">
-                                    <p class="card-text">
-                                    <a href="https://github.com/kumarivb" target="_blank"><img class="img-fluid connect rounded" src="assets/images/github.png" alt="Github"></a>
-                                    <a href="https://www.linkedin.com/in/kumarivb" target="_blank"><img class="img-fluid connect rounded" src="assets/images/linkedin.png" alt="LinkedIn"></a>
-                                    <a href="https://stackoverflow.com/cv/kumarivb" target="_blank"><img class="img-fluid connect rounded" src="assets/images/stackoverflow.png" alt="StackOverflow"></a>
-                                    </p>
-                                </div>
+                    </div>
+                    <!-- END MAIN CONTENT -->  
+
+                    <!-- START SIDEBAR -->
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-body pb-4" style="text-align: center;">
+                                <h5 class="card-title headerConnect">Connect with Me</h5>
+                                <hr class="my-4">
+                                <p class="card-text">
+                                <a href="https://github.com/kumarivb" target="_blank"><img class="img-fluid connect rounded" src="assets/images/github.png" alt="Github"></a>
+                                <a href="https://www.linkedin.com/in/kumarivb" target="_blank"><img class="img-fluid connect rounded" src="assets/images/linkedin.png" alt="LinkedIn"></a>
+                                <a href="https://stackoverflow.com/cv/kumarivb" target="_blank"><img class="img-fluid connect rounded" src="assets/images/stackoverflow.png" alt="StackOverflow"></a>
+                                </p>
                             </div>
-                        </div>           
+                        </div>
+                    </div>
+                    <!-- END SIDEBAR -->           
                 </div>
         </div>
+        <!-- END MAIN CONTAINER -->
+
         <div class="push"></div>		
     </div>	
 
