--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="en-us">
 <head>
 	<meta charset="UTF-8">
-
 	<title>Bootstrap Portfolio</title>
-
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
@@ -12,6 +10,7 @@
 
 <body>
 	<div class="wrapper">
+		<!-- START NAV -->
 		<nav class="navbar navbar-expand-lg navbar-light bg-white">
 			<div class="container">
 				<a class="navbar-brand siteHeader" href="index.html"><h1 class="bigYtext">Kumari</h1></a>
@@ -26,19 +25,24 @@
 				</div>
 			</div>
 		</nav>	
+		<!-- END NAV -->
 
+		<!-- START MAIN CONTAINER -->
 		<div class="container aboutContent">
 			<div class="row">
+				<!-- START MAIN CONTENT -->
 				<div class="col-md-8">
 					<div class="card">
 						<div class="card-body">
 							<h3 class="card-title headerAbout">About Me</h3>
 							<hr class="my-4">
-							<p class="card-text"><img class="img-fluid float-md-left rounded mr-3" src="assets/images/sloth.jpg" alt="Kumari">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt optio provident tempora amet, eveniet et, eum illum, culpa laborum dicta recusandae magni architecto. Illo saepe facilis, unde. Debitis, atque, doloremque?</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolorum perferendis voluptates error ullam placeat repellendus. Repellendus error repellat veritatis recusandae voluptates earum rerum consectetur itaque, ipsam nihil. Alias, nemo.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores ratione sint ex porro excepturi non dolorum, ullam ea quae vel earum, soluta obcaecati natus. Eligendi iusto accusantium mollitia debitis assumenda!</p>
+							<p class="card-text"><img class="img-fluid float-md-left rounded mr-3" src="assets/images/kumari.jpg" alt="Kumari">I have designed and developed multiple web applications using JavaScript, CSS, Node.js, Express.js, Firebase, MySQL, MongoDB, and React technologies. I like to be challenged; with practice I think testing and debugging will become one of my strong suits.</p>
 						</div>
 					</div>
 				</div>
+				<!-- END MAIN CONTENT -->
 
+				<!-- START SIDEBAR -->
 				<div class="col-md-4">
 					<div class="card">
 						<div class="card-body pb-4" style="text-align: center;">
@@ -51,17 +55,22 @@
 							</p>
 						</div>
 					</div>
-				</div>					
+				</div>
+				<!-- END SIDEBAR -->
 			</div>
 		</div>
+		<!-- END MAIN CONTAINER -->
+		
 		<div class="push"></div>		
 	</div>	
 	
+	<!-- START FOOTER -->
 	<footer>
 		<div class="container containFooter">
 			<p class="copyright">Copyright &copy; 2017 Kumari</p>
 		</div>
-	</footer>										
-</body>
+	</footer>
+	<!-- END FOOTER  -->
 
+</body>
 </html>
